# q-format

./: CMakeLists.txt  README.md  main.cpp  q-format.h  vypocet.ods
accuracy/: CMakeLists.txt  acc_div.cpp  acc_exp.cpp  acc_mul.cpp  binary.gnuplot  common.hpp  unary.gnuplot
benchmarks/: CMakeLists.txt  bench_exp.cpp
include/: CMakeLists.txt
include/qfm/: qfm.hpp
include/qfm/detail/: int_types.h  q_impl.hpp
q-format/: int_types.h  q-format-div128.inl  q-format-mul128.inl  q-format-operations-basic.inl  q-format-operations-root.inl  q-format-ops-basic.h  q-format-ops-exp.h  q-format-ops-exp.inl  q-format-ops-root.h  q-format-ops-root.inl  q-format.h  q-format_operations.inl
src/: CMakeLists.txt  int_types.h  q-format-ops-basic.h  q-format-ops-exp.h  q-format-ops-root.h  q-format.h
tests/: CMakeLists.txt  test-generator.cpp  test_addition.cpp  test_addition.h  test_division.cpp  test_division.h  test_doubleconversion.cpp  test_doubleconversion.h  test_exp.cpp  test_exp.h  test_limits.h  test_limits_max16.cpp  test_limits_max32.cpp  test_limits_max64.cpp  test_limits_max8.cpp  test_limits_min16.cpp  test_limits_min32.cpp  test_limits_min64.cpp  test_limits_min8.cpp  test_misc.cpp  test_misc.h  test_multiplication.cpp  test_multiplications.cpp  test_multiplications.h  test_root.cpp  test_root.h  test_rounding.cpp  test_separ.cpp  test_separ.h  test_sizeconversion.cpp  test_sizeconversion.h  test_subtraction.cpp  test_subtraction.h  tests.cmake  tests.cpp  tests.h
tests-old/: CMakeLists.txt  test-generator.cpp  test_addition.cpp  test_addition.h  test_division.h  test_exp.h  test_limits_max16.cpp  test_limits_max8.cpp  test_limits_min16.cpp  test_multiplications.cpp  test_root.cpp  test_separ.cpp
